# rust-game

./: maze_gen.js
client/: Cargo.toml  index.html  script.js
client/src/: lib.rs  packets.rs  render.rs
client/src/structs/: camera.rs  gamemode.rs  object.rs  player.rs
client/src/structs/Gamemodes/: 2tdm.rs
server/: Cargo.toml
server/src/: main.rs  messages.rs
server/src/structs/: player.rs
server/src/structs/Gamemodes/: ffa.rs
