[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Event", "MessageEvent", "WebSocket", "Window", "Document", "HtmlElement", "HtmlCanvasElement", "CanvasRenderingContext2d"]
