[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo = "0.11.0"
js-sys = "0.3.77"
libm = "0.2.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Event", "EventTarget", "AddEventListenerOptions", "MessageEvent", "WebSocket", "Window", "Document", "HtmlElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "Performance", "KeyboardEvent"]
