[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-tungstenite = "0.29.1"
env_logger = "0.11.8"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
styledlog = "0.2.1"
tokio = { version="1.44.2", features = ["full"] }
tokio-tungstenite = "0.26.2"
